8195803: Eliminate use of sun.nio.ch.DirectBuffer in javafx.media
Reviewed-by: kcr