@@ -1584,8 +1584,6 @@ allprojects {
 // Qualified exports needed by javafx.* modules (excluding javafx.swing)
 def qualExportsCore = [
     "--add-exports=java.base/jdk.internal.misc=javafx.graphics",
-    "--add-exports=java.base/jdk.internal.ref=javafx.media",
-    "--add-exports=java.base/sun.nio.ch=javafx.media",
     "--add-exports=java.base/sun.reflect.misc=javafx.base",
     "--add-exports=java.base/sun.reflect.misc=javafx.fxml",
     "--add-exports=java.base/sun.reflect.misc=javafx.web",
